# ptl

./: BaseApplication.cpp  BtOgreShapeDispatcher.cpp  BtOgreShapeDispatcher.h  BulletImporterShapeDispatcher.cpp  BulletImporterShapeDispatcher.h  CMakeLists.txt  CollisionShapeDispatcher.cpp  CollisionShapeDispatcher.h  DebugDraw.hpp  PtlBaseDeviceScene.h  PtlBodyComponent.h  PtlBtOgreShapeDispatcher.cpp  PtlBtOgreShapeDispatcher.h  PtlBulletImporterShapeDispatcher.cpp  PtlBulletImporterShapeDispatcher.h  PtlChainComponent.cpp  PtlChainComponent.h  PtlCollisionShapeDispatcher.cpp  PtlCollisionShapeDispatcher.h  PtlCollisionShapeDispatcherData.h  PtlFlywheelChainWeights.cpp  PtlFlywheelChainWeights.h  PtlLeverComponent.cpp  PtlLeverComponent.h  PtlOgrePhysicalBody.cpp  PtlOgrePhysicalBody.h  PtlParallelFlywheels.cpp  PtlParallelFlywheels.h  PtlParallelRingwheels.cpp  PtlParallelRingwheels.h  PtlPerpetualCommon.h  PtlPhysicalBody.cpp  PtlPhysicalBody.h  PtlRackComponent.cpp  PtlRackComponent.h  PtlRingwheelComponent.cpp  PtlRingwheelComponent.h  PtlRingwheelGearComponent.cpp  PtlRingwheelGearComponent.h  PtlSlotBlockerComponent.cpp  (+9 more)
meshes/: ChainSegment.mesh  Flywheel.mesh  Rack.mesh  Sphere.mesh  flywheel.bcs
resources/: Flywheel.mesh  Rack.mesh  Ringweight.mesh  Ringwheel.mesh  Ringwheel4.mesh  arm_cuboid.mesh  brown.material  flywheel.bcs  flywheel.material  front_blocker.bcs  front_blocker.mesh  rear_blocker.mesh  ringwheel.bcs  ringwheel4.bcs  ringwheel5.bcs  ringwheel5.mesh  ringwheel5_gear.bcs  ringwheel5_gear.mesh  slot_blocker.mesh
resources/blender/: ChainSegment.blend  Lever.mesh  Rack.blend  flywheel.blend  flywheel_rw.blend  front_blocker.blend  front_blocker_long.blend  lever.blend  rear_blocker.blend  ringweight.blend  ringwheel.blend  ringwheel4.blend  ringwheel4_fb.blend  ringwheel5.blend  ringwheel5_gear.blend  ringwheel_mod.blend  slot_blocker.blend  sphere.blend
